V 
* features
- 
* bug fixes
-
 
V 3.3.3
* features
- 
* bug fixes
- update small widget too

V 3.3.2
* features
- smaller widget and a new tiny widget
- log start and stop in switchlog
- clear all power usage from menu
* bug fixes
- prevent background process from being killed (if notification is shown)
- fix capabilities check
- fix crashes

V 3.3.1
* features
- display help icon on main screen
* bug fixes
- fix crash on editor close
- launch market if superuser is not installed
- fix crashes

V 3.3.0 
* features
- Japanese translation (by Sunatomo)
- a widget (as extension)
- switch services from current tab
- show battery level in notification
- track power consumption in battery % per hour (beta and not quite working)
- translated (de, it and ja) trigger, profile and virtual governor names (on system configuration load)
- lots minor changes
* bug fixes
- fix profile "none" after manual profile changes
- fix crashes

V 3.2.2
* features
- 
* bug fixes
- fix context menu in lists
- fix governor description on load
- allow export of switch log to capabilities check mail

V 3.2.1
* features
- Italian translation (by Rino)
- minor layout optimisations
* bug fixes
- fix refresh not working after orientation change
- rare crash

V 3.2.0
* features
- optimise layout for ice cream sandwich (android 4)
- speedup profile switches
- new advanced statistics that allow filtering
- allow special cpu setting during profile switch
- settings for extensions
* bug fixes
- use added configuration as the current one
- cpufreq files not found in some kernels
- files only be read by root in some devices (JackieKu)

V 3.1.4
* features
- 
* bug fixes
- fixes ICS crashes (should fix HC as well)
- fix insert as new for configuration autoload

V 3.1.3
* features
- 
* bug fixes
- fixes

V 3.1.2
* features
- 
* bug fixes
- fix force closes

V 3.1.1
* features
- 
* bug fixes
- fix manual service changes getting confused by service state leave
- fix force closes

V 3.1.0 
* features