@@ -8,7 +8,9 @@ V 3.3.3
 * features
 - 
 * bug fixes
-- update small widget too
+- update small widget
+- fix notification setting
+- fix crashes
 
 V 3.3.2
 * features
